# tap-powerbi-metadata

./: pyproject.toml
tap_powerbi_metadata/: auth.py  client.py  streams.py  tap.py
